--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "dependencies": {
         "@inertiajs/vue3": "^1.0.15",
         "@mdi/font": "^7.4.47",
-        "chart.js": "^4.4.2",
+        "moment": "^2.30.1",
         "vue-chartjs": "^5.3.0",
         "vue-sweetalert2": "^5.0.5",
         "vue3-toastify": "^0.2.1",
