--- a/.env.example
+++ b/.env.example
@@ -63,6 +63,8 @@ ADMIN_EMAIL_ADDRESS=
 AUTH_PHYSICIAN_PASS=POY_2024
 AUTH_ADMIN_PASS=Admin4321
 DEADLINE=2024-06-09
+EVAL_DEADLINE=2024-06-14
 APP_TIMEZONE=America/Los_Angeles
 
 VITE_DEADLINE="${DEADLINE}"
+VITE_EVAL_DEADLINE="${EVAL_DEADLINE}"
